--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>Привет, мир!</h1>
+    <h1>Заглушка</h1>
+    <p>Скоро здесь будет крутой сайт!</p>
     <script src="js/script.js"></script>
 </body>
 </html>
