fix: add favicon and update index.html

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Шапка сайта -->
     <header>
-        <a href="/">Логотип или название сайта</a>
+        <a href="/">Спорстмены МИРЭА</a>
         <!-- Главное меню навигации -->
         <nav>
             <ul>
@@ -28,7 +28,8 @@
         <!-- Секция 1 с якорем -->
         <section id="services">
             <h2>Наши услуги</h2>
-            <p>Расчитаем для вас ваш суточный калораж</p>
+            <p>Расчитаем для вас ваш суточный калораж - 1200 раблс</p>
+            <p>дыхательные пракитики и медитация - 3500 раблс</p>
             <a href="#contacts">Связаться с нами</a> <!-- Якорная ссылка внутри страницы -->
         </section>
         <!-- Секция 2 с якорем -->
