feat: add multi-page structure with semantics, nav and anchors

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная - Название вашего сайта</title>
-    <meta name="description" content="Краткое описание главной страницы вашего сайта">
+    <title>Главная - Спортсмены МИРЭА</title>
+    <meta name="description"
+        content="Спортивный клуб МИРЭА: расчет калоража, дыхательные практики, подготовка к марафонам">
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
-    <!-- Шапка сайта -->
     <header>
-        <a href="/">Спорстмены МИРЭА</a>
-        <!-- Главное меню навигации -->
+        <a href="/">Спортсмены МИРЭА</a> <!-- Исправлено -->
         <nav>
             <ul>
                 <li><a href="index.html">Главная</a></li>
@@ -22,32 +21,30 @@
             </ul>
         </nav>
     </header>
-    <!-- Уникальное основное содержимое страницы -->
     <main>
         <h1>Добро пожаловать на наш сайт!</h1>
-        <!-- Секция 1 с якорем -->
         <section id="services">
             <h2>Наши услуги</h2>
             <p>Расчитаем для вас ваш суточный калораж - 1200 раблс</p>
-            <p>дыхательные пракитики и медитация - 3500 раблс</p>
-            <a href="#contacts">Связаться с нами</a> <!-- Якорная ссылка внутри страницы -->
+            <p>Дыхательные практики и медитация - 3500 раблс</p> 
+            <p>Курс подготовка к полумарафону за лето - 13200 раблс</p> 
+            <a href="#contacts">Связаться с нами</a>
         </section>
-        <!-- Секция 2 с якорем -->
         <section id="portfolio">
-            <h2>Портфолио</h2>
-            <p>Примеры наших работ...</p>
+            <h2>Портфолио:</h2>
+            <p>В данный момент сайт только начал свою работу</p>
         </section>
-        <!-- Секция 3 с якорем -->
         <section id="contacts">
             <h2>Контактная информация</h2>
-            <p>Наши контакты...</p>
-            <a href="contacts.html">Подробнее</a> <!-- Ссылка на отдельную страницу -->
+            <p>Наши контакты:</p>
+            <p>Телефон поддержки: +7 (916) 322-14-47</p>
+            <p>Почта: uchikhamadara@yandex.ru</p>
+            <a href="contacts.html">Подробнее</a>
         </section>
     </main>
-    <!-- Подвал сайта -->
     <footer>
-        <p>&copy; Спорстмены МИРЭА. Все права защищены.</p>
-        <p>Телефон: +7 (916) 322-14-47</p>
+        <p>&copy; Спортсмены МИРЭА. Все права защищены.</p> <!-- Исправлено -->
+        <p>Телефон: +7 (916) 822-00-07</p> <!-- Закрыт тег -->
     </footer>
 </body>
 
